Fix bookmark link arrow wrap

--- a/internal/glance/static/css/widget-bookmarks.css
+++ b/internal/glance/static/css/widget-bookmarks.css
@@ -6,6 +6,10 @@
     color: var(--bookmarks-group-color);
 }
 
+.bookmarks-link {
+    white-space: nowrap;
+}
+
 .bookmarks-link:not(.bookmarks-link-no-arrow)::after {
     content: '↗' / "";
     margin-left: 0.5em;
